[package]
name = "lbuffer"
version = "0.1.0"
edition = "2021"
author = "Ionized Girl"
description = "Line-wise memory buffer for pipes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
smashquote = { version = "0", path = "../smashquote" }
anyhow = { version = "1" }
crossbeam = { version = "0" }
